trying to fix test failure due dropping of messages on lock timeout on Travis CI